# crypto-price-monitor-backend

./: README.md  manage.py  pyproject.toml
authentication/: models.py  serializers.py  views.py
authentication/migrations/: 0001_initial.py
crypto_monitor_backend/: admin.py  apps.py  models.py  views.py
crypto_monitor_backend/management/commands/: monitor_currencies.py  monitor_currency_pairs.py
crypto_monitor_backend/migrations/: 0001_initial.py  0002_accesslog_ip_address.py  0003_alter_accesslog_country.py  0004_alter_accesslog_time.py  0005_rename_currency_pair_savedcurrencypair_pair_and_more.py
crypto_price_monitor_backend/: asgi.py  settings.py  urls.py  wsgi.py
monitor_currency_pairs/: apps.py
